Updated GA4 code.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -8,7 +8,7 @@ const {
   canonical = 'https://www.reignites.co.uk',
 } = Astro.props;
 
-const GA_ID = 'G-24GQGYEG13';
+const GA_ID = 'G-Z2146Y81XC';
 ---
 
 <!DOCTYPE html>
@@ -48,13 +48,13 @@ const GA_ID = 'G-24GQGYEG13';
     />
 
     <!-- GA library -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-24GQGYEG13"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z2146Y81XC"></script>
 
     <!-- Consent-aware GA init (hardcoded) -->
     <script is:inline>
       {`
         (function () {
-          const GA_ID = "G-24GQGYEG13";
+          const GA_ID = "G-Z2146Y81XC";
           const CONSENT_KEY = "reignite_cookie_consent";
 
           if (!GA_ID) return;
