--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -55,7 +55,7 @@ const GA_ID = 'G-Z2146Y81XC';
 
           window.dataLayer = window.dataLayer || [];
           function gtag(){window.dataLayer.push(arguments);}
-          window.gtag = gtag; // Define global gtag function
+          window.gtag = gtag;
 
           function userHasConsented() {
             try {
